--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,15 +19,17 @@ $floppybot-admin-console-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$floppybot-admin-console-theme: mat.define-light-theme((
-  color: (
-    primary: $floppybot-admin-console-primary,
-    accent: $floppybot-admin-console-accent,
-    warn: $floppybot-admin-console-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$floppybot-admin-console-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $floppybot-admin-console-primary,
+      accent: $floppybot-admin-console-accent,
+      warn: $floppybot-admin-console-warn,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+  )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -37,5 +38,11 @@ $floppybot-admin-console-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
