--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <mat-toolbar-row>
     <span>
-      <mat-icon></mat-icon>
+      <ng-icon name="bootstrapFloppy2"></ng-icon>
       FloppyBot
     </span>
     <button mat-button>Hello World</button>
