--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
-<mat-toolbar>
-  <mat-toolbar-row>
-    <span>
-      <ng-icon name="bootstrapFloppy2"></ng-icon>
-      FloppyBot
-    </span>
-    <button mat-button>Hello World</button>
-  </mat-toolbar-row>
-</mat-toolbar>
+<fac-navigation></fac-navigation>
 
-<p>Hello World, this is a test.</p>
-<button mat-button>Go</button>
+<router-outlet></router-outlet>
