--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ fac-navigation {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 9999; // This ensures that the element is always on top of other elements
+  z-index: 99;
 }
 
 .page-container {
