--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,2 @@
-<p>home works!</p>
+<h1>FloppyBot Admin Console</h1>
+<p>Welcome to the FloppyBot Admin Console. Here you can manage your FloppyBot instance, view logs, and more.</p>
