--- a/src/app/components/channel-selector/channel-selector.component.html
+++ b/src/app/components/channel-selector/channel-selector.component.html
@@ -5,7 +5,7 @@
   </mat-label>
 
   <mat-select [formControl]="form" placeholder="Select a channel">
-    @for (channel of channels; track $index) {
+    @for (channel of channels$ | async; track $index) {
       <mat-option [value]="channel">
         <mat-icon>
           <ng-icon [name]="(channel | channelIcon)!"></ng-icon>
