file table adjustments

--- a/src/app/pages/files/manage-files/manage-files.component.scss
+++ b/src/app/pages/files/manage-files/manage-files.component.scss
@@ -1,3 +1,14 @@
 :host {
   display: block;
 }
+
+.mat-column-icon {
+  width: 50px;
+}
+.mat-column-size {
+  width: 100px;
+}
+.mat-column-actions {
+  width: 200px;
+  text-align: right;
+}
