--- a/src/app/pages/files/manage-files/manage-files.component.html
+++ b/src/app/pages/files/manage-files/manage-files.component.html
@@ -2,19 +2,41 @@
   <fac-channel-selector (channelSelected)="onChannelSelected($event)"></fac-channel-selector>
 
   <table mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="icon">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let file">
+        <mat-icon>
+          <ng-icon name="bootstrapFileEarmark"></ng-icon>
+        </mat-icon>
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-cell *matCellDef="let file">
+        {{ file.name }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="size">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>File Size</th>
-      <td mat-cell *matCellDef="let element">{{ element.size }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Size</th>
+      <td mat-cell *matCellDef="let file">{{ file.size }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-      <td mat-cell *matCellDef="let element">{{ element.date }}</td>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let file">
+        <button mat-icon-button [matTooltip]="getDownloadTooltip(file)">
+          <mat-icon>
+            <ng-icon name="bootstrapDownload"></ng-icon>
+          </mat-icon>
+        </button>
+        <button mat-icon-button [matTooltip]="getDeleteTooltip(file)">
+          <mat-icon>
+            <ng-icon name="bootstrapTrash"></ng-icon>
+          </mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
