--- a/src/app/pages/files/manage-files/manage-files.component.html
+++ b/src/app/pages/files/manage-files/manage-files.component.html
@@ -2,7 +2,7 @@
   <fac-channel-selector (channelSelected)="onChannelSelected($event)"></fac-channel-selector>
 
   <table mat-table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="icon">
+    <ng-container matColumnDef="mimeType">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let file">
         <mat-icon>
@@ -11,16 +11,16 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="fileName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell *matCellDef="let file">
-        {{ file.name }}
+        {{ file.fileName }}
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="size">
+    <ng-container matColumnDef="fileSize">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Size</th>
-      <td mat-cell *matCellDef="let file">{{ file.size }}</td>
+      <td mat-cell *matCellDef="let file">{{ file.fileSize | fileSize }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
