--- a/src/app/pages/files/manage-files/manage-files.component.html
+++ b/src/app/pages/files/manage-files/manage-files.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-  <fac-channel-selector (channelSelected)="onChannelSelected($event)"></fac-channel-selector>
+  <fac-channel-selector></fac-channel-selector>
 
   <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="mimeType">
