implemented quote list

--- a/src/app/pages/quotes/manage-quotes/manage-quotes.component.scss
+++ b/src/app/pages/quotes/manage-quotes/manage-quotes.component.scss
@@ -1,3 +1,13 @@
 :host {
   display: block;
 }
+
+.mat-column-quoteId {
+  width: 50px;
+  text-align: right;
+}
+
+.mat-column-actions {
+  width: 200px;
+  text-align: right;
+}
