--- a/src/app/pages/quotes/manage-quotes/manage-quotes.component.html
+++ b/src/app/pages/quotes/manage-quotes/manage-quotes.component.html
@@ -1,1 +1,32 @@
-<p>manage-quotes works!</p>,
+<div class="mat-elevation-z8">
+  <fac-channel-selector></fac-channel-selector>
+  <mat-paginator [pageSize]="10" hidePageSize="true" showFirstLastButtons></mat-paginator>
+
+  <table mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="quoteId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+      <td mat-cell *matCellDef="let quote">#{{ quote.quoteId }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="quote">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Text</th>
+      <td mat-cell *matCellDef="let quote">
+        {{ quote.quoteText }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let quote">
+        <button mat-icon-button [matTooltip]="getDeleteTooltip(quote)">
+          <mat-icon>
+            <ng-icon name="bootstrapTrash"></ng-icon>
+          </mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
