--- a/src/app/pages/quotes/manage-quotes/manage-quotes.component.scss
+++ b/src/app/pages/quotes/manage-quotes/manage-quotes.component.scss
@@ -6,8 +6,11 @@
   width: 50px;
   text-align: right;
 }
-
+.mat-column-createdAt {
+  width: 120px;
+  text-align: center;
+}
 .mat-column-actions {
-  width: 200px;
+  width: 150px;
   text-align: right;
 }
