--- a/src/app/pages/quotes/manage-quotes/manage-quotes.component.html
+++ b/src/app/pages/quotes/manage-quotes/manage-quotes.component.html
@@ -9,15 +9,41 @@
     </ng-container>
 
     <ng-container matColumnDef="quote">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Text</th>
+      <th mat-header-cell *matHeaderCellDef>Text</th>
       <td mat-cell *matCellDef="let quote">
         {{ quote.quoteText }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="quoteContext">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Context</th>
+      <td mat-cell *matCellDef="let quote">
+        {{ quote.quoteContext }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="createdBy">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Created by</th>
+      <td mat-cell *matCellDef="let quote">
+        {{ quote.createdBy }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Created at</th>
+      <td mat-cell *matCellDef="let quote">
+        {{ quote.createdAt | date: 'dd/MM/yyyy' }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let quote">
+        <button mat-icon-button [matTooltip]="getEditTooltip(quote)">
+          <mat-icon>
+            <ng-icon name="bootstrapPencil"></ng-icon>
+          </mat-icon>
+        </button>
         <button mat-icon-button [matTooltip]="getDeleteTooltip(quote)">
           <mat-icon>
             <ng-icon name="bootstrapTrash"></ng-icon>
