--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,11 @@
-<p>not-found works!</p>,
+<div class="page-not-found">
+  <mat-icon>
+    <ng-icon name="bootstrapQuestionDiamond"></ng-icon>
+  </mat-icon>
+  <h1>Page Not Found</h1>
+  <p>
+    Sorry, we've looked everywhere but we can't find the page you're looking for. It's like trying to find a panda in a
+    snowstorm!
+  </p>
+  <p>Head over to the navigation menu at the top left to go where you need to go.</p>
+</div>
