list for built-in commands

--- a/src/app/pages/commands/built-in-commands/built-in-commands.component.scss
+++ b/src/app/pages/commands/built-in-commands/built-in-commands.component.scss
@@ -1,3 +1,22 @@
 :host {
   display: block;
 }
+
+.command-aliases {
+  font-style: italic;
+  font-size: small;
+  margin-left: 10px;
+}
+
+.mat-column-enabled {
+  width: 55px;
+  text-align: center;
+}
+.mat-column-restrictions {
+  width: 150px;
+  text-align: center;
+}
+.mat-column-actions {
+  width: 200px;
+  text-align: right;
+}
