you cannot delete built-in commands

--- a/src/app/pages/commands/built-in-commands/built-in-commands.component.html
+++ b/src/app/pages/commands/built-in-commands/built-in-commands.component.html
@@ -52,7 +52,7 @@
         </button>
         <button mat-icon-button [matTooltip]="getDisableTooltip(command)">
           <mat-icon>
-            <ng-icon name="bootstrapTrash"></ng-icon>
+            <ng-icon name="bootstrapBan"></ng-icon>
           </mat-icon>
         </button>
       </td>
