unified command lists

--- a/src/app/pages/commands/custom-commands/custom-commands.component.html
+++ b/src/app/pages/commands/custom-commands/custom-commands.component.html
@@ -1,1 +1,4 @@
-<p>custom-commands works!</p>,
+<div class="mat-elevation-z8">
+  <fac-channel-selector></fac-channel-selector>
+  <fac-command-list [commands]="commands$ | async"></fac-command-list>
+</div>
