--- a/src/app/pages/commands/built-in-commands/built-in-commands.component.html
+++ b/src/app/pages/commands/built-in-commands/built-in-commands.component.html
@@ -1,64 +1,4 @@
 <div class="mat-elevation-z8">
   <fac-channel-selector></fac-channel-selector>
-  <mat-paginator [pageSize]="10" hidePageSize="true" showFirstLastButtons></mat-paginator>
-
-  <table mat-table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="enabled">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Enabled</th>
-      <td mat-cell *matCellDef="let command">
-        @if (true) {
-          <mat-icon matTooltip="Enabled">
-            <ng-icon name="bootstrapCheckCircle"></ng-icon>
-          </mat-icon>
-        } @else {
-          <mat-icon matTooltip="Disabled">
-            <ng-icon name="bootstrapXCircle"></ng-icon>
-          </mat-icon>
-        }
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="restrictions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Restrictions</th>
-      <td mat-cell *matCellDef="let command">
-        <fac-command-restrictions [command]="command"></fac-command-restrictions>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Command</th>
-      <td mat-cell *matCellDef="let command">
-        <code class="command-name">&gt; {{ command.name }}</code>
-        @if (command.aliases.length > 0) {
-          <code matTooltip="Aliases" class="command-aliases">{{ command.aliases | list }}</code>
-        }
-        <br />
-        <span class="command-description">{{ command.description }}</span>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let command">
-        <button mat-icon-button [matTooltip]="getDetailTooltip(command)">
-          <mat-icon>
-            <ng-icon name="bootstrapSearch"></ng-icon>
-          </mat-icon>
-        </button>
-        <button mat-icon-button [matTooltip]="getEditTooltip(command)">
-          <mat-icon>
-            <ng-icon name="bootstrapPencil"></ng-icon>
-          </mat-icon>
-        </button>
-        <button mat-icon-button [matTooltip]="getDisableTooltip(command)">
-          <mat-icon>
-            <ng-icon name="bootstrapBan"></ng-icon>
-          </mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+  <fac-command-list [commands]="commands$ | async"></fac-command-list>
 </div>
