--- a/src/app/pages/commands/custom-commands/custom-commands.component.html
+++ b/src/app/pages/commands/custom-commands/custom-commands.component.html
@@ -1,4 +1,4 @@
 <div class="mat-elevation-z8">
   <fac-channel-selector></fac-channel-selector>
-  <fac-command-list [commands]="commands$ | async"></fac-command-list>
+  <fac-command-list [commands]="commands$ | async" [allowDelete]="true"></fac-command-list>
 </div>
