cleanup and added command summary

--- a/src/app/components/command-list/command-list.component.scss
+++ b/src/app/components/command-list/command-list.component.scss
@@ -20,3 +20,10 @@
   width: 200px;
   text-align: right;
 }
+
+.list-summary {
+  text-align: center;
+  font-style: italic;
+  font-size: small;
+  padding: 10px;
+}
