implemented a global loading indicator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<fac-navigation></fac-navigation>
+<div class="page-navigation">
+  <fac-navigation></fac-navigation>
+  <fac-global-loading-indicator></fac-global-loading-indicator>
+</div>
 <div class="page-container">
   <router-outlet></router-outlet>
 </div>
