--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,32 @@
-<h1>FloppyBot Admin Console</h1>
-<p>Welcome to the FloppyBot Admin Console. Here you can manage your FloppyBot instance, view logs, and more.</p>
+<div class="page-content">
+  <mat-icon class="banner-icon">
+    <ng-icon name="bootstrapFloppy2"></ng-icon>
+  </mat-icon>
+  <h1>Welcome to FloppyBot</h1>
+  <p>FloppyBot is an open-source, multi-platform chat bot.</p>
+  <p>
+    To login, press the
+    <span
+      ><mat-icon><ng-icon name="bootstrapFloppy2"></ng-icon></mat-icon
+    ></span>
+    in the top-left corner.
+  </p>
+  <p>
+    Sign-ups are currently not available, but you can host your own instance. Checkout the source code on
+    <a href="https://github.com/rgunti/floppybot" target="_blank">GitHub</a>.
+  </p>
+  <div class="button-row">
+    <a mat-flat-button color="primary" href="https://github.com/rgunti/floppybot" target="_blank">
+      <mat-icon>
+        <ng-icon name="bootstrapGithub"></ng-icon>
+      </mat-icon>
+      Check-out on GitHub
+    </a>
+    <a mat-button href="https://floppybot.floppypanda.ch/#/" target="_blank">
+      <mat-icon>
+        <ng-icon name="bootstrapBook"></ng-icon>
+      </mat-icon>
+      Documentation
+    </a>
+  </div>
+</div>
