--- a/src/app/pages/callback/callback.component.html
+++ b/src/app/pages/callback/callback.component.html
@@ -1,4 +1,4 @@
-@if (error$ | async as error) {
+@if (error$ | async; as error) {
   <div class="container">
     <div class="row">
       <div class="col-12">
