--- a/src/app/pages/files/manage-files/manage-files.component.html
+++ b/src/app/pages/files/manage-files/manage-files.component.html
@@ -43,4 +43,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+
+  <fac-file-storage-quota></fac-file-storage-quota>
 </div>
