--- a/src/app/pages/files/manage-files/manage-files.component.html
+++ b/src/app/pages/files/manage-files/manage-files.component.html
@@ -1,5 +1,12 @@
 <div class="mat-elevation-z8">
-  <fac-channel-selector></fac-channel-selector>
+  <mat-toolbar class="action-toolbar">
+    <fac-channel-selector></fac-channel-selector>
+    <button mat-icon-button matTooltip="Upload File" [disabled]="(selectedChannelId$ | async) === undefined">
+      <mat-icon>
+        <ng-icon name="bootstrapUpload"></ng-icon>
+      </mat-icon>
+    </button>
+  </mat-toolbar>
   <mat-paginator [pageSize]="10" hidePageSize="true" showFirstLastButtons></mat-paginator>
 
   <table mat-table [dataSource]="dataSource" matSort>
