--- a/src/app/pages/quotes/manage-quotes/manage-quotes.component.html
+++ b/src/app/pages/quotes/manage-quotes/manage-quotes.component.html
@@ -1,5 +1,8 @@
 <div class="mat-elevation-z8">
-  <fac-channel-selector></fac-channel-selector>
+  <mat-toolbar class="action-toolbar">
+    <fac-channel-selector></fac-channel-selector>
+  </mat-toolbar>
+
   <mat-paginator [pageSize]="10" hidePageSize="true" showFirstLastButtons></mat-paginator>
 
   <table mat-table [dataSource]="dataSource" matSort>
