--- a/src/app/pages/quotes/manage-quotes/manage-quotes.component.scss
+++ b/src/app/pages/quotes/manage-quotes/manage-quotes.component.scss
@@ -2,6 +2,17 @@
   display: block;
 }
 
+.action-toolbar {
+  & > * {
+    flex: 0;
+  }
+
+  fac-channel-selector {
+    flex: 1;
+    margin-top: 25px;
+  }
+}
+
 .mat-column-quoteId {
   width: 50px;
   text-align: right;
