--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,19 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+// *** Colors
+.success {
+  color: green;
+}
+.warning {
+  color: orange;
+}
+.error {
+  color: red;
+}
+
+// *** Global Overrides
+.mat-mdc-dialog-actions {
+  justify-content: end !important;
+}
