--- a/src/app/components/command-list/command-list.component.html
+++ b/src/app/components/command-list/command-list.component.html
@@ -4,13 +4,13 @@
   <ng-container matColumnDef="enabled">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Enabled</th>
     <td mat-cell *matCellDef="let command">
-      @if (true) {
-        <mat-icon matTooltip="Enabled">
-          <ng-icon name="bootstrapCheckCircle"></ng-icon>
+      @if (command.disabled) {
+        <mat-icon matTooltip="Disabled" class="disabled">
+          <ng-icon name="bootstrapXLg"></ng-icon>
         </mat-icon>
       } @else {
-        <mat-icon matTooltip="Disabled">
-          <ng-icon name="bootstrapXCircle"></ng-icon>
+        <mat-icon matTooltip="Enabled" class="success">
+          <ng-icon name="bootstrapCheckCircle"></ng-icon>
         </mat-icon>
       }
     </td>
@@ -55,9 +55,9 @@
           </mat-icon>
         </button>
       } @else {
-        <button mat-icon-button [matTooltip]="getDisableTooltip(command)">
+        <button mat-icon-button [matTooltip]="getDisableTooltip(command)" (click)="disableCommand.next(command)">
           <mat-icon>
-            <ng-icon name="bootstrapBan"></ng-icon>
+            <ng-icon [name]="command.disabled ? 'bootstrapPower' : 'bootstrapBan'"></ng-icon>
           </mat-icon>
         </button>
       }
