--- a/src/app/components/command-list/command-list.component.html
+++ b/src/app/components/command-list/command-list.component.html
@@ -38,7 +38,7 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let command">
-      <button mat-icon-button [matTooltip]="getDetailTooltip(command)">
+      <button mat-icon-button [matTooltip]="getDetailTooltip(command)" (click)="showCommandDetails.next(command)">
         <mat-icon>
           <ng-icon name="bootstrapSearch"></ng-icon>
         </mat-icon>
