--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -11,3 +11,12 @@ mat-form-field {
     margin-bottom: -7px;
   }
 }
+
+.mat-mdc-card-avatar mat-icon.mat-icon {
+  width: 40px;
+  height: 40px;
+
+  ng-icon {
+    --ng-icon__size: 40px !important;
+  }
+}
