checkpoint: custom command editor

--- a/src/app/pages/commands/custom-commands/custom-commands.component.html
+++ b/src/app/pages/commands/custom-commands/custom-commands.component.html
@@ -12,5 +12,10 @@
       </mat-icon>
     </button>
   </mat-toolbar>
-  <fac-command-list [commands]="commands$ | async" [allowDelete]="true"></fac-command-list>
+  <fac-command-list
+    [commands]="commands$ | async"
+    [allowDelete]="true"
+    [allowDetail]="false"
+    (editCommand)="editCommand($event)"
+  ></fac-command-list>
 </div>
