--- a/src/app/components/command-list/command-list.component.html
+++ b/src/app/components/command-list/command-list.component.html
@@ -38,18 +38,20 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let command">
-      <button mat-icon-button [matTooltip]="getDetailTooltip(command)" (click)="showCommandDetails.next(command)">
-        <mat-icon>
-          <ng-icon name="bootstrapSearch"></ng-icon>
-        </mat-icon>
-      </button>
-      <button mat-icon-button [matTooltip]="getEditTooltip(command)">
+      @if (allowDetail) {
+        <button mat-icon-button [matTooltip]="getDetailTooltip(command)" (click)="showCommandDetails.next(command)">
+          <mat-icon>
+            <ng-icon name="bootstrapSearch"></ng-icon>
+          </mat-icon>
+        </button>
+      }
+      <button mat-icon-button [matTooltip]="getEditTooltip(command)" (click)="editCommand.next(command)">
         <mat-icon>
           <ng-icon name="bootstrapPencil"></ng-icon>
         </mat-icon>
       </button>
       @if (allowDelete) {
-        <button mat-icon-button [matTooltip]="getDeleteTooltip(command)">
+        <button mat-icon-button [matTooltip]="getDeleteTooltip(command)" (click)="deleteCommand.next(command)">
           <mat-icon>
             <ng-icon name="bootstrapTrash"></ng-icon>
           </mat-icon>
