--- a/src/app/components/privilege-icon/privilege-icon.component.html
+++ b/src/app/components/privilege-icon/privilege-icon.component.html
@@ -1,3 +1,3 @@
-<mat-icon [matTooltip]="privilege">
+<mat-icon [matTooltip]="tooltip ? privilege : ''">
   <ng-icon [name]="icon"></ng-icon>
 </mat-icon>
