--- a/src/app/pages/commands/custom-commands/custom-commands.component.html
+++ b/src/app/pages/commands/custom-commands/custom-commands.component.html
@@ -3,6 +3,16 @@
     <fac-channel-selector></fac-channel-selector>
     <button
       mat-icon-button
+      matTooltip="Create Command"
+      [disabled]="(selectedChannelId$ | async) === undefined"
+      (click)="createCommand()"
+    >
+      <mat-icon>
+        <ng-icon name="bootstrapPlus"></ng-icon>
+      </mat-icon>
+    </button>
+    <button
+      mat-icon-button
       matTooltip="Refresh"
       [disabled]="(selectedChannelId$ | async) === undefined"
       (click)="refresh$.next()"
